--- a/frontend/web/scss/app/structure/_mvp.scss
+++ b/frontend/web/scss/app/structure/_mvp.scss
@@ -205,6 +205,9 @@ body{
 	max-width: 440px;
 	font-size: 16px;
 	outline: none !important;
+	line-height: getBase('input-height');
+	padding: 0 10px;
+	/*height: getBase('input-height');*/
 }
 
 .text-field:focus{
@@ -212,9 +215,14 @@ body{
 }
 
 .text-filed_textarea{
+	line-height: normal;
 	resize: none;
 	padding: 10px;
 	height: 100px;
+}
+
+.text-field.error{
+	box-shadow: 0 -6px 0 -3px getBase('color-one') inset;
 }
 
 
@@ -433,8 +441,18 @@ body{
 	}
 }
 
+.custom-input_number_type-two{
+	.custom-input__view{
+		background: #fff;
+	}
+}
 
-.product{}
+
+.product{
+	.product__price{
+		@include primaryBg();
+	}
+}
 
 .product_single{
 	$productThumbWidth: 39%;
@@ -489,7 +507,6 @@ body{
 	}
 
 	.product__price{
-		@include primaryBg();;
 		display: inline-block;
 		padding-right: 10px;
 		line-height: 40px;
@@ -510,6 +527,51 @@ body{
 		line-height: 40px;
 		padding: 0 15px;
 		vertical-align: top;
+	}
+}
+
+.product_list-item{
+	overflow: hidden;
+	font-size: 0;
+
+	.product__info,
+	.product__params{
+		display: inline-block;
+		width: 50%;
+		vertical-align: middle;
+		padding: 15px 0;
+		padding-left: 20px;
+	}
+
+	.product__info{
+		font-size: getBase('font-size');
+	}
+
+	.product__params{
+		white-space: nowrap;
+		text-align: right;
+		font-size: 0;
+	}
+
+	.product__param{
+		display: inline-block;
+		font-size: 18px;
+		margin-left: 10px;
+	}
+
+	.product__price{
+		line-height: getBase('input-height');
+		height:  getBase('input-height');
+		padding: 0 10px;
+		padding-right: 20px;
+	}
+
+	.product__name{
+		font-size: 18px;
+		margin-bottom: 3px;
+	}
+	.product__desc{
+		font-size: 13px;
 	}
 }
 
@@ -548,6 +610,18 @@ body{
 	.list__item-subtitle{
 		margin-top: 10px;
 		margin-bottom: 5px;
+	}
+}
+
+.list_products{
+	.list__item{
+		display: block;
+	}
+}
+
+.list_cart-products{
+	.list__item:nth-child(odd){
+		background: #f8f8f8;
 	}
 }
 
@@ -639,5 +713,69 @@ body{
 
 	&_hidden{
 		right: -($iconWidth+$textWidth);
+	}
+}
+
+
+
+.cart{
+	background: #fff;
+
+	&__form{
+		padding-top: 15px;
+		padding-bottom: 20px;
+	}
+
+	&__form-footer{
+		margin-top: 25px;
+	}
+
+	$height: 40px;
+
+	&__total{
+		@include primaryBg;
+		line-height: $height;
+		padding-left: 30px;
+		padding-right: 10px;
+		display: inline-block;
+		font-size: 18px;
+	}
+
+	&__order-btn{
+		line-height: $height;
+		padding: 0 25px;
+		font-size: 16px;
+	}
+}
+
+
+.grid{
+	display: block;
+	font-size: 0;
+	&__item{
+		font-size: getBase('font-size');
+		display: inline-block;
+	}
+}
+
+.grid_50{
+	$padding: 28px;
+
+	.grid__item{
+		width: 50%;
+		padding-left: $padding;
+		padding-bottom: $padding/1.5;
+	}
+
+	.grid__item:nth-child(even){
+		padding-right: $padding;
+	}
+}
+
+
+.field{
+	&__label{
+		margin-bottom: 5px;
+		font-size: 14px;
 	}
 }
